[tool.poetry]
name = "ai-genai-llm-security-redteaming"
version = "1.0.0"
description = "LLM security red-teaming framework implementing OWASP Top 10 for LLM Applications with automated attack/defense pipelines"
authors = ["Saurabh Herwadkar"]
readme = "README.md"
license = "MIT"
packages = [{include = "security_redteaming", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
anthropic = "^0.52.0"
openai = "^1.78.0"
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
pydantic = "^2.11.0"
pydantic-settings = "^2.9.0"
pyyaml = "^6.0.2"
structlog = "^25.4.0"
httpx = "^0.28.0"
python-dotenv = "^1.1.0"
jinja2 = "^3.1.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-asyncio = "^0.26.0"
pytest-cov = "^6.1.0"
pytest-mock = "^3.14.0"
ruff = "^0.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src/security_redteaming --cov-report=term-missing --cov-report=html"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "COM", "C4", "PT"]
ignore = ["S101", "COM812"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["security_redteaming"]
